fix  Header issue and add dark mode functionality

--- a/FarmerApp/static/css/home/index.css
+++ b/FarmerApp/static/css/home/index.css
@@ -1,134 +1,14 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI,
-    Roboto, Helvetica, Arial, sans-serif;
+  font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Helvetica, Arial, sans-serif;
   box-sizing: border-box;
-}
-header {
-  /* display: flex;
-  background-color: #f1cea0;
-  height: 90px;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #f1cea0; */
-  position: fixed;
-        top: 0;
-        width: 100%;
-        z-index: 999; /* Ensure it stays on top of other content */
-        display: flex;
-        background-color: transparent;
-        height: 90px;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 1px solid #764505;
-}
-.Kissan_home {
-  height: 70px;
-  width: 70px;
-}
-.logo_container {
-  margin-left: 2%;
-}
-.action_bar {
-  margin-right: 2%;
-}
-.nav-bar {
-  display: flex;
-  min-width: 500px;
-  justify-content: space-evenly;
-
-}
-.nav-bar a {
-  font-size: 15px;
-  letter-spacing: 0.3px;
-  color: #282c3f;
-  /* color: white; */
-  font-weight: 700;
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 28px 0;
-  /* border-bottom: 5px solid #f1cea0; */
-}
-.nav-bar a:hover {
-  border-bottom: 4px solid #04690d;
-}
-
-.search_bar {
-  height: 40px;
-  min-width: 300px;
-  width: 30%;
-  display: flex;
-  align-items: center;
-}
-.search_icon {
-  box-sizing: content-box;
-  height: 20px;
-  padding: 10px;
-  background: #f5f5f6;
-  color: #282c3f;
-  font-weight: 300;
-  border-radius: 4px 0 0 4px;
-}
-.search_input {
-  color: #696e79;
-  background: #f5f5f6;
-  flex-grow: 1;
-  height: 40px;
-  border: 0;
-  border-radius: 0 4px 4px 0;
-}
-
-.action_bar {
-  display: flex;
-  min-width: 200px;
-  justify-content: space-evenly;
-}
-.action_container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-}
-.action_container .dropdown_options {
-  display: none;
-  position: absolute;
-  top: calc(100% + 10px);
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #fff;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 2px 10px black;
-}
-.dropdown_item {
-  display: block;
-  color: #282c3f;
-  text-decoration: none;
-  padding: 8px 12px;
-  transition: background-color 0.3s ease;
-}
-
-.dropdown_item:hover {
-  border: 1px solid black;
-  background-color: #f1cea0;
-}
-
-.action_container:hover .dropdown_options {
-  display: block;
-}
-
-/* Hamburger Menu */
-.hamburger_menu {
-  display: none;
-  margin-right: 5px;
-  color: #0f0e0e;
 }
 
 .hamburger_menu button i {
-  font-size: 30px; /* Adjust the font size as needed */
+  font-size: 30px;
 }
-
 @media only screen and (max-width: 600px) {
   .nav-bar,
   .action_bar {
@@ -292,8 +172,7 @@ form {
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
-  transition: background-color 0.3s ease-in-out,
-    transform 0.2s ease-in-out;
+  transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
 }
 
 .form-group input[type="submit"]:hover {
